[gd_scene load_steps=16 format=3 uid="uid://busnbc5l2x2d8"]

[ext_resource type="Script" path="res://scripts/player_new.gd" id="1_fpduk"]
[ext_resource type="PackedScene" uid="uid://bu0nvauvao0p8" path="res://scenes/modules/building/BlockManager/BlockManager.tscn" id="2_dr144"]
[ext_resource type="PackedScene" uid="uid://ba4dqbjixuqtp" path="res://scenes/modules/guns/WeaponManager.tscn" id="3_skmbn"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3eu0p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e445b"]

[sub_resource type="Animation" id="Animation_jhgv2"]
length = 0.001

[sub_resource type="Animation" id="Animation_knepc"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/WeaponManager:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.375, -0.155, -0.4), Vector3(0.375, -0.18, -0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/WeaponManager:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.122103, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qcgne"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/WeaponManager:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.375, -0.155, -0.4), Vector3(0.325, -0.14, -0.4), Vector3(0.375, -0.155, -0.4), Vector3(0.425, -0.14, -0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6wdk"]
_data = {
"RESET": SubResource("Animation_jhgv2"),
"idle": SubResource("Animation_knepc"),
"move": SubResource("Animation_qcgne")
}

[sub_resource type="Animation" id="Animation_7e51c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/SubViewportContainer/SubViewport/HealScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hhb47"]
resource_name = "damage"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/SubViewportContainer/SubViewport/DamageScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4kvac"]
resource_name = "heal"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/SubViewportContainer/SubViewport/HealScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3sgv2"]
_data = {
"RESET": SubResource("Animation_7e51c"),
"damage": SubResource("Animation_hhb47"),
"heal": SubResource("Animation_4kvac")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hn37q"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:username")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:health")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:maxHealth")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("Camera3D/WeaponManager:position")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("Camera3D/WeaponManager:rotation")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("Camera3D/WeaponManager:scale")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("Camera3D/BlockManager:position")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath("Camera3D/BlockManager:rotation")
properties/10/spawn = true
properties/10/replication_mode = 1
properties/11/path = NodePath("Camera3D/BlockManager:scale")
properties/11/spawn = true
properties/11/replication_mode = 1

[sub_resource type="LabelSettings" id="LabelSettings_l1v7f"]
font_size = 50

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("blockManager", "weaponManager")]
collision_layer = 2
script = ExtResource("1_fpduk")
blockManager = NodePath("Camera3D/BlockManager")
weaponManager = NodePath("Camera3D/WeaponManager")
JUMP_VELOCITY = 5.0
runMultiplier = 1.5

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_3eu0p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_e445b")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51306, 0)
cull_mask = 524287

[node name="BlockManager" parent="Camera3D" instance=ExtResource("2_dr144")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.5, -0.25, -0.5)

[node name="WeaponManager" parent="Camera3D" instance=ExtResource("3_skmbn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.395, -0.149, -0.4)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -50)
collision_mask = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p6wdk")
}
autoplay = "idle"
playback_default_blend_time = 0.05

[node name="HealthAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3sgv2")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hn37q")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.785398

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="UI/SubViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(3000, 3000)
render_target_update_mode = 4

[node name="DamageScreen" type="ColorRect" parent="UI/SubViewportContainer/SubViewport"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color(1, 0, 0, 0.270588)

[node name="HealScreen" type="ColorRect" parent="UI/SubViewportContainer/SubViewport"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513678, 1, 0.48175, 0.270588)

[node name="DeathScreen" type="PanelContainer" parent="UI/SubViewportContainer/SubViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/SubViewportContainer/SubViewport/DeathScreen"]
layout_mode = 2
color = Color(1, 0, 0, 0.270588)

[node name="death_label" type="Label" parent="UI/SubViewportContainer/SubViewport/DeathScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -11.5
offset_right = 103.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Respawning in 3 seconds..."
label_settings = SubResource("LabelSettings_l1v7f")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
